test/FAIL/disasmcmd/multiple_of_4/04_test_disasm.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="range not a multiple of 4"
#-------

load boucle.o
disasm 0x1000:0x1005
